use redirect google auth + fix dark mode default

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -7,7 +7,6 @@
 
 
 body {
-    background-color: var(--background-color);
     margin: 0;
     height: 100vh;
     width: 100vw;
